--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,17 @@
   </head>
 
   <body>
+    <%= link_to "Home", root_path %>
+    <% if logged_in? %>
+      |
+      <%= link_to "Sign Out", session_path(session[:teacher_id]), :method => :delete %>
+    <% else %>
+      |
+      <%= link_to "Sign In", root_path %>
+      |
+      <%= link_to "Sign Up", root_path %>
+    <% end %>
+
     <%= yield %>
   </body>
 </html>
