Create teacher show page

--- a/app/views/teachers/index.html.erb
+++ b/app/views/teachers/index.html.erb
@@ -2,6 +2,6 @@
 
 <ul>
   <% @teachers.each do |teacher| %>
-    <li><%= link_to "#{teacher.full_name}", teacher_path(teacher) %></li>
+    <li><%= link_to "#{teacher.full_name}", teacher %></li>
   <% end %>
 </ul>
