--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,60 @@
  *= require_tree .
  *= require_self
  */
+
+html {
+  height: 100%;
+}
+
+body {
+  height: 100vh;
+  top: 0;
+  position: absolute;
+  width: 100vw;
+  margin: 0px;
+}
+
+.container {
+  padding: 16px;
+  width: 960px;
+  margin: 0 auto;
+  overflow: hidden;
+}
+
+.main-content {
+  padding-top: 50px;
+}
+
+#navigation-bar {
+  overflow: hidden;
+  background-color: #6495ED;
+  width: 100%;
+  height: 50px;
+  top: 0;
+  left: 0;
+  position: fixed;
+}
+
+#navigation-bar .site-name {
+  float: left;
+  display: block;
+  font-family: 'Lobster', serif;
+  font-weight: bold;
+  font-size: 3em;
+  text-shadow: 4px 4px 4px #aaa;
+  color: #fcfaf9;
+  text-align: center;
+  padding: 14px 16px;
+}
+
+#navigation-bar .nav-text {
+  float: right;
+  display: block;
+  font-family: serif;
+  font-weight: bold;
+  font-size: 17px;
+  color: #FFFFFF;
+  text-align: center;
+  text-decoration: none;
+  padding: 14px 16px;
+}
