--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,17 +4,25 @@
     <title>TeacherGroupCreator</title>
     <%= csrf_meta_tags %>
 
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lobster">
+
     <%= stylesheet_link_tag    'application', media: 'all' %>
     <%= javascript_include_tag 'application' %>
   </head>
 
   <body>
-    <%= link_to "Home", root_path %>
-    <% if logged_in? %>
-      |
-      <%= link_to "Sign Out", session_path(session[:teacher_id]), :method => :delete %>
-    <% end %>
+    <div id="navigation-bar">
 
-    <%= yield %>
+      <%= link_to "Home", root_path, :class => "nav-text" %>
+      <% if logged_in? %>
+        |
+        <%= link_to "Sign Out", session_path(session[:teacher_id]), :method => :delete, :class => "nav-text" %>
+      <% end %>
+    </div>
+
+    <div class="main-content">
+      <%= yield %>
+    </div>
   </body>
 </html>
