--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,7 @@
 
       <%= link_to "Home", root_path, :class => "nav-text" %>
       <% if logged_in? %>
-        <%= link_to "Sign Out", session_path(session[:teacher_id]), :method => :delete, :class => "nav-text" %>
+        <%= link_to "Sign Out", sessions_path(session[:teacher_id]), :method => :delete, :class => "nav-text" %>
       <% end %>
     </div>
 
