--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -137,6 +137,50 @@ body {
   background-image: linear-gradient(to bottom, #3cb0fd, #3498db);
 }
 
+#edit-button, #add-button {
+  background: #4599d1;
+  background-image: -webkit-linear-gradient(top, #4599d1, #2f75a1);
+  background-image: -moz-linear-gradient(top, #4599d1, #2f75a1);
+  background-image: -ms-linear-gradient(top, #4599d1, #2f75a1);
+  background-image: -o-linear-gradient(top, #4599d1, #2f75a1);
+  background-image: linear-gradient(to bottom, #4599d1, #2f75a1);
+  -webkit-border-radius: 7;
+  -moz-border-radius: 7;
+  border-radius: 7px;
+  -webkit-box-shadow: 0px 1px 3px #5c585c;
+  -moz-box-shadow: 0px 1px 3px #5c585c;
+  box-shadow: 0px 1px 3px #5c585c;
+  padding: 7px 20px 7px 20px;
+  border: solid #1f628d 2px;
+  text-align: center;
+  margin-top: 10px;
+}
+
+#edit-button a {
+  font-family: serif;
+  color: #FFFFFF;
+  font-size: 15px;
+  text-decoration: none;
+}
+
+#add-button {
+  font-family: serif;
+  color: #FFFFFF;
+  font-size: 15px;
+  text-decoration: none;
+  width: 100%;
+}
+
+#edit-button:hover, #add-button:hover {
+  background: #3cb0fd;
+  background-image: -webkit-linear-gradient(top, #3cb0fd, #3498db);
+  background-image: -moz-linear-gradient(top, #3cb0fd, #3498db);
+  background-image: -ms-linear-gradient(top, #3cb0fd, #3498db);
+  background-image: -o-linear-gradient(top, #3cb0fd, #3498db);
+  background-image: linear-gradient(to bottom, #3cb0fd, #3498db);
+  text-decoration: none;
+}
+
 #wrapper {
   width: 100%;
 }
@@ -144,6 +188,10 @@ body {
 .student-names {
   display: inline-block;
   float: left;
+}
+
+#add-edit-section {
+  width: 25%;
 }
 
 .ajax-details {
