--- a/app/views/students/_student_details.html.erb
+++ b/app/views/students/_student_details.html.erb
@@ -1,4 +1,3 @@
-
 <table data-student-id=<%= @student.id %>>
   <tr>
     <th>Full Name:</th>
@@ -30,21 +29,24 @@
   </tr>
 </table>
 
+<div id="add-edit-section">
+  <div id="edit-button">
+    <%= link_to 'Edit Student', edit_student_path %>
+  </div>
 
-<%= link_to 'Edit Student', edit_student_path %>
+  <%= form_with model: @student, url: assign_student_path(@student), remote: true, local: true do |f|%>
 
-<%= form_with model: @student, url: assign_student_path(@student), remote: true, local: true do |f|%>
+    <%= f.hidden_field :teacher_id %>
+    <p>
+      <% if flash[:notice] %>
+        <div class="notice">
+          <%= flash[:notice] %>
+        </div>
+      <% end %>
+    </p>
+    <p>
+      <%= f.submit 'Add Student', :id => 'add-button'%>
+    </p>
 
-  <%= f.hidden_field :teacher_id %>
-  <p>
-    <% if flash[:notice] %>
-      <div class="notice">
-        <%= flash[:notice] %>
-      </div>
-    <% end %>
-  </p>
-  <p>
-    <%= f.submit 'Add Student' %>
-  </p>
-
-<% end %>
+  <% end %>
+</div>
