Add styling to update student button

--- a/app/views/students/edit.html.erb
+++ b/app/views/students/edit.html.erb
@@ -30,6 +30,6 @@
     <%= f.text_field :shirt_size %>
   </p>
   <p>
-    <%= f.submit %>
+    <%= f.submit 'Update Details', :id => 'update-button' %>
   </p>
 <% end %>
