--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -137,7 +137,7 @@ body {
   background-image: linear-gradient(to bottom, #3cb0fd, #3498db);
 }
 
-#edit-button, #add-button {
+#edit-button, #add-button, #update-button {
   background: #4599d1;
   background-image: -webkit-linear-gradient(top, #4599d1, #2f75a1);
   background-image: -moz-linear-gradient(top, #4599d1, #2f75a1);
@@ -171,7 +171,15 @@ body {
   width: 100%;
 }
 
-#edit-button:hover, #add-button:hover {
+#update-button {
+  font-family: serif;
+  color: #FFFFFF;
+  font-size: 15px;
+  text-decoration: none;
+  width: 10%;
+}
+
+#edit-button:hover, #add-button:hover, #update-button:hover {
   background: #3cb0fd;
   background-image: -webkit-linear-gradient(top, #3cb0fd, #3498db);
   background-image: -moz-linear-gradient(top, #3cb0fd, #3498db);
