--- a/app/views/homes/homes.html.erb
+++ b/app/views/homes/homes.html.erb
@@ -16,7 +16,7 @@
       </div>
     </div>
   <% else %>
-    <div class="login-form">
+    <div class="login form">
     <%= render 'sessions/new' %>
     </div>
   <% end %>
