--- a/app/views/students/edit.html.erb
+++ b/app/views/students/edit.html.erb
@@ -1,35 +1,39 @@
-<h1>Edit Student</h1>
+<% if logged_in? %>
+  <h1>Edit Student</h1>
 
-<%= form_with model: @student, local: true do |f| %>
-  <p>
-    <%= f.label :first_name %><br>
-    <%= f.text_field :first_name %>
-  </p>
-  <p>
-    <%= f.label :last_name %><br>
-    <%= f.text_field :last_name %>
-  </p>
-  <p>
-    <%= f.label :grade_level %><br>
-    <%= f.text_field :grade_level %>
-  </p>
-  <p>
-    <%= f.label :gender %><br>
-    <%= f.text_field :gender %>
-  </p>
-  <p>
-    <%= f.label :gpa %><br>
-    <%= f.text_field :gpa %>
-  </p>
-  <p>
-    <%= f.label :detentions %><br>
-    <%= f.text_field :detentions %>
-  </p>
-  <p>
-    <%= f.label :shirt_size %><br>
-    <%= f.text_field :shirt_size %>
-  </p>
-  <p>
-    <%= f.submit 'Update Details', :id => 'update-button' %>
-  </p>
+  <%= form_with model: @student, local: true do |f| %>
+    <p>
+      <%= f.label :first_name %><br>
+      <%= f.text_field :first_name %>
+    </p>
+    <p>
+      <%= f.label :last_name %><br>
+      <%= f.text_field :last_name %>
+    </p>
+    <p>
+      <%= f.label :grade_level %><br>
+      <%= f.text_field :grade_level %>
+    </p>
+    <p>
+      <%= f.label :gender %><br>
+      <%= f.text_field :gender %>
+    </p>
+    <p>
+      <%= f.label :gpa %><br>
+      <%= f.text_field :gpa %>
+    </p>
+    <p>
+      <%= f.label :detentions %><br>
+      <%= f.text_field :detentions %>
+    </p>
+    <p>
+      <%= f.label :shirt_size %><br>
+      <%= f.text_field :shirt_size %>
+    </p>
+    <p>
+      <%= f.submit 'Update Details', :id => 'update-button' %>
+    </p>
+  <% end %>
+<% else %>
+ <h1>Please login to view this page.</h1>
 <% end %>
