--- a/app/views/students/index.html.erb
+++ b/app/views/students/index.html.erb
@@ -1,13 +1,17 @@
-<h1>Students</h1>
+<% if logged_in? %>
+  <h1>Students</h1>
 
-<div id="wrapper">
-  <div class="student-names">
-    <ul>
-      <% @students.each do |student| %>
-        <li><%= link_to student.full_name, student_path(student), remote: true %></li><br>
-      <% end %>
-    </ul>
+  <div id="wrapper">
+    <div class="student-names">
+      <ul>
+        <% @students.each do |student| %>
+          <li><%= link_to student.full_name, student_path(student), remote: true %></li><br>
+        <% end %>
+      </ul>
+    </div>
+    <div class="ajax-details">
+    </div>
   </div>
-  <div class="ajax-details">
-  </div>
-</div>
+<% else %>
+ <h1>Please login to view this page.</h1>
+<% end %>
