--- a/app/views/students/show.html.erb
+++ b/app/views/students/show.html.erb
@@ -1,5 +1,9 @@
-<h1><%= @student.full_name %></h1>
+<% if logged_in? %>
+  <h1><%= @student.full_name %></h1>
 
-<%= render 'student_details' %>
+  <%= render 'student_details' %>
+<% else %>
+ <h1>Please login to view this page.</h1>
+<% end %>
 
 
