--- a/app/views/homes/homes.html.erb
+++ b/app/views/homes/homes.html.erb
@@ -1,10 +1,6 @@
-<% if flash[:notice] %>
-  <div class="notice"><%= flash[:notice] %></div>
-<% end %>
-
 <div class="home-image">
 </div>
-
+<%= render 'partials/flash' %>
 <div class="home-page">
   <% if logged_in? %>
     <div class="display-buttons">
