--- a/app/views/students/edit.html.erb
+++ b/app/views/students/edit.html.erb
@@ -33,6 +33,11 @@
     <p>
       <%= f.submit 'Update Details', :id => 'update-button' %>
     </p>
+
+  <% end %>
+  <%= form_with model: @student, url: unassign_student_path(@student), remote: true, local: true do |f| %>
+      <%= f.hidden_field :teacher_id %>
+      <%= f.submit 'Unassign Student', :id => 'unassign-button' %>
   <% end %>
 <% else %>
  <h1>Please login to view this page.</h1>
