--- a/app/views/students/edit.html.erb
+++ b/app/views/students/edit.html.erb
@@ -35,10 +35,12 @@
     </p>
 
   <% end %>
-  <%= form_with model: @student, url: unassign_student_path(@student), remote: true, local: true do |f| %>
-      <%= f.hidden_field :teacher_id %>
-      <%= f.submit 'Unassign Student', :id => 'unassign-button' %>
-  <% end %>
+
+    <%= form_with model: @student, url: unassign_student_path(@student), remote: true, local: true do |f| %>
+        <%= f.hidden_field :teacher_id %>
+        <%= f.submit 'Unassign', :id => 'unassign-button' %>
+    <% end %>
+
 <% else %>
  <h1>Please login to view this page.</h1>
 <% end %>
